# SOFT

./: README.md  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.ts  tauri.conf.json
app/: globals.css  layout.tsx  page.tsx
components/: file-details.tsx  file-filter.tsx  file-list.tsx  file-preview.tsx  loading-animation.tsx  resizable-sidebar.tsx  search-bar.tsx  search-history.tsx  search-interface.tsx  settings-dialog.tsx  welcome-screen.tsx
lib/: mock-data.ts  tauri-service.ts  websocket-service.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_indexer.rs  main.rs  types.rs  vector_search.rs  websocket.rs
types/: file.ts
