[package]
name = "file-search-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
actix-web = "4.4"
actix-ws = "0.11"
tokio = { version = "1.35", features = ["full"] }
tantivy = "0.21"
qdrant-client = "1.7"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
walkdir = "2.4"
pdf = "0.8"
docx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
notify = "6.1"
thiserror = "1.0"
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"
log = "0.4"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]